# mero-pixart

./: .gitignore  Makefile  README.md  TRACKER.md
.github/workflows/: ci.yml  integration-ci.yml  workflow-tests.yml
app/: eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
app/e2e/: editor.spec.ts  landing.spec.ts
app/e2e/integration/: README.md  rpc.spec.ts
app/src/: App.tsx  index.css  main.tsx
app/src/api/: appId.ts  rpc.ts
app/src/components/: AdjustmentsPanel.module.css  AdjustmentsPanel.tsx  CanvasStage.module.css  CanvasStage.tsx  ColorPicker.module.css  ColorPicker.tsx  CursorDot.tsx  CursorsOverlay.module.css  CursorsOverlay.tsx  CurvesEditor.module.css  CurvesEditor.tsx  HistoryPanel.module.css  HistoryPanel.tsx  InviteModal.module.css  InviteModal.tsx  LayersPanel.module.css  LayersPanel.tsx  LevelsEditor.module.css  LevelsEditor.tsx  Logo.tsx  Navigator.module.css  Navigator.tsx  OptionsBar.module.css  OptionsBar.tsx  Rulers.module.css  Rulers.tsx  SettingsModal.module.css  SettingsModal.tsx  StatusBar.module.css  StatusBar.tsx  ToolIcons.tsx  Toolbar.module.css  Toolbar.tsx  TopBar.module.css  TopBar.tsx  UsernameModal.module.css  UsernameModal.tsx
app/src/contexts/: ToastContext.tsx
app/src/hooks/: useSse.ts
app/src/pages/: EditorPage.module.css  (+9 more)
logic/: Cargo.toml  build-bundle.sh  build.sh  calimero.json  rust-toolchain.toml
logic/src/: lib.rs
scripts/: dev-invite.sh  dev-node.sh  dev-node2.sh  setup.sh  workflows.sh
workflows/: e2e.yml  integration-setup.yml  logic-test.yml
(+19 files in other folders)
